--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "1.10.1",
+    "ejs": "1.0.0",
     "express": "4.11.0",
     "lodash": "2.4.1",
     "mongoose": "4.6.4",
     "mongoose-q": "0.1.0",
-    "request": "2.51.0",
+    "passport": "^0.3.2",
+    "passport-oauth2": "^1.4.0",
     "q": "1.1.2",
-    "body-parser": "1.10.1",
-    "ejs" : "1.0.0"
+    "request": "2.51.0"
   }
 }
