--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "1.10.1",
+    "chai": "^4.1.0",
     "ejs": "1.0.0",
     "express": "4.11.0",
     "lodash": "2.4.1",
