--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "1.0.0",
     "express": "4.11.0",
     "lodash": "2.4.1",
+    "mocha": "^3.5.0",
     "mongoose": "4.6.4",
     "mongoose-q": "0.1.0",
     "passport": "^0.3.2",
