--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "passport-oauth2": "^1.4.0",
     "q": "1.1.2",
     "request": "2.51.0"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.5"
   }
 }
