--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "4.6.4",
     "mongoose-q": "0.1.0",
     "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
     "passport-oauth2": "^1.4.0",
     "q": "1.1.2",
     "request": "2.51.0"
