--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "dependencies": {
     "body-parser": "1.10.1",
     "chai": "^4.1.0",
+    "cookie-parser": "^1.4.3",
     "ejs": "1.0.0",
     "express": "4.11.0",
+    "express-session": "^1.15.5",
+    "express-sslify": "^1.2.0",
     "lodash": "2.4.1",
     "mocha": "^3.5.0",
     "mongoose": "4.6.4",
     "mongoose-q": "0.1.0",
     "passport": "^0.3.2",
-    "passport-http-bearer": "^1.0.1",
     "passport-oauth2": "^1.4.0",
     "q": "1.1.2",
-    "request": "2.51.0"
+    "request": "^2.74.0"
   },
   "devDependencies": {
     "istanbul": "^0.4.5"
