--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language: node_js
 node_js:
   - "iojs"
   - "7"
+notifications:
+  email:
+    - oliver.jakab.r@gmail.com
+    - omar.osman.asd@gmail.com
