--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "release_date": "2016-10-13",
   "private": true,
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "cover": "istanbul cover ./node_modules/.bin/_mocha",
     "test": "mocha"
   },
