--- a/package.json
+++ b/package.json
@@ -9,20 +9,17 @@
     "test": "mocha"
   },
   "dependencies": {
-    "body-parser": "1.10.1",
+    "body-parser": "1.18.2",
     "chai": "^4.1.0",
     "cookie-parser": "^1.4.3",
-    "ejs": "1.0.0",
-    "express": "4.11.0",
+    "ejs": "^2.5.7",
+    "express": "4.16.2",
     "express-session": "^1.15.5",
     "express-sslify": "^1.2.0",
-    "lodash": "2.4.1",
-    "mocha": "^3.5.0",
-    "mongoose": "4.6.4",
-    "mongoose-q": "0.1.0",
-    "passport": "^0.3.2",
+    "mocha": "^5.0.1",
+    "mongoose": "5.0.8",
+    "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
-    "q": "1.1.2",
     "request": "^2.74.0"
   },
   "devDependencies": {
