--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "Szertar",
-  "version": "0.0.1",
-  "release_date": "2016-10-13",
+  "name": "szertar-redo",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "cover": "istanbul cover ./node_modules/.bin/_mocha",
-    "test": "mocha"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "1.18.2",
-    "chai": "^4.1.0",
-    "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.7",
-    "express": "4.16.2",
-    "express-session": "^1.15.5",
-    "express-sslify": "^1.2.0",
-    "mocha": "^5.0.1",
-    "mongoose": "5.0.8",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "express": "~4.16.0",
+    "express-session": "^1.15.6",
+    "http-errors": "~1.6.2",
+    "mongoose": "^5.2.4",
+    "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
-    "request": "^2.74.0"
-  },
-  "devDependencies": {
-    "istanbul": "^0.4.5"
+    "request": "^2.87.0"
   }
 }
