--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.4",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
     "request": "^2.87.0"
