--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.3.1",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "sharp": "^0.20.5"
   }
 }
