--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "debug": "nodemon --inspect ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -12,13 +13,16 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "express-sse": "^0.5.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.4",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "nodemailer": "^4.6.7",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
     "request": "^2.87.0",
     "sharp": "^0.20.5"
-  }
+  },
+  "devDependencies": {}
 }
