--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.6",
     "express-sse": "^0.5.0",
     "http-errors": "~1.6.2",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.4",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
