--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "connect-mongodb-session": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "dotenv": "^6.0.0",
+    "dotenv": "^8.2.0",
     "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "express": "^4.17.1",
     "express-session": "^1.15.6",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.7.3",
     "moment": "^2.22.2",
-    "mongoose": "^5.2.4",
+    "mongoose": "^5.8.11",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "nodemailer": "^4.6.7",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
     "request": "^2.87.0",
-    "sharp": "^0.20.5",
+    "sharp": "^0.24.0",
     "web-push": "^3.3.2"
   },
   "devDependencies": {}
