--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SESSION_SECRET=secret
-MONGO_PATH=mongodb://localhost:27017/app
+MONGO_PATH=mongodb://localhost:27017/szertar
 OAUTH2_ID=id
 OAUTH2_KEY=key
 PUBLIC_VAPID_KEY=vapidkey
