--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "debug": "nodemon --inspect ./bin/www"
+    "start": "node ./src/server.js",
+    "debug": "nodemon --inspect ./src/server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
