--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./src/server.js",
-    "debug": "nodemon --inspect ./src/server.js"
+    "debug": "nodemon --inspect ./src/server.js",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -28,6 +30,7 @@
     "web-push": "^3.3.2"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "nodemon": "^2.0.2"
   }
 }
